feat(hdf5): 新增HDF5文件上传与处理API功能
新增了用于上传、合并和处理HDF5文件的完整后端接口。包括：
- 支持分块上传大文件（chunked upload）
- 提供文件夹及HDF5文件列表查询接口
- 实现从HDF5中提取图像帧并编码为base64格式返回
- 增加路径安全检查防止目录遍历攻击

同时更新Dockerfile以安装必要的系统依赖（如libgl1和libglib2.0-0），
并在pyproject.toml中添加h5py、numpy、opencv-python等依赖项，
将Python最低版本要求提升至3.10。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,13 +21,17 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.68.0",
     "uvicorn>=0.15.0",
     "websockets>=10.0",
     "paho-mqtt>=1.6.1",
     "pydantic>=1.8.0",
+    "h5py>=3.10.0",
+    "numpy>=2.2.0,<3.0.0",
+    "opencv-python>=4.10.0",
+    "python-multipart>=0.0.9",
 ]
 
 [project.optional-dependencies]
